# langgraph-basics

./: pyproject.toml
docs/: 01_introduction.md  02_foundation.md  03_integration.md  04_advanced.md  05_deployment.md  06_limitations.md  07_customizations.md  08_hacks_alternates.md  09_volume.md  10_security.md  11_observability.md  12_scalability.md  13_challenges.md
exercises/: 01_core_patterns.py  02_llm_and_streaming.py  03_prebuilt_and_tools.py  04_production_patterns.py  05_security_and_guardrails.py  06_multi_agent.py  07_observability_and_scale.py
